--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,8 @@
 name: EssentialsPro
 version: '${project.version}'
 main: de.essentialspro.EssentialsPro
+
+
+commands:
+  gamemode:
+    aliases: [gm]
